--- a/redirect/style.css
+++ b/redirect/style.css
@@ -93,8 +93,50 @@ form input#submitButton {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    transition: all 0.3s ease;
 }
 
 form input#submitButton:hover {
     cursor: pointer;
+    box-shadow: 0px 3px 5px #e7004c38;
+    -webkit-box-shadow: 0px 3px 5px #e7004c38;
 }
+/*CSS LOADER*/
+.lds-ring {
+    margin: auto;
+    /*display: inline-block;*/
+    display: none;
+    position: relative;
+    width: 40px;
+    height: 40px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    margin: 4px;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #dd004a transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
