--- a/redirect/style.css
+++ b/redirect/style.css
@@ -40,7 +40,7 @@ form {
 
 form h1 {
     margin: 0px;
-    font-size: clamp(2.8rem, 3vw, 3.2rem);
+    font-size: clamp(2.6rem, 3vw, 3.2rem);
     font-weight: bold;
     line-height: 1.2;
     letter-spacing: -0.04em;
@@ -59,9 +59,9 @@ form .input-box {
     margin-bottom: 20px;
 }
 
-form input#inputemail {
+form input#inputEmail {
     width: 100%;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     line-height: 2.2;
     color: #111;
     min-height: 4rem;
@@ -71,18 +71,18 @@ form input#inputemail {
     transition: all 0.5s ease;
 }
 
-form input#inputemail::placeholder {
+form input#inputEmail::placeholder {
     padding-left: 20px;
     font-size: 1.6rem;
 }
 
-form input#inputemail:focus {
+form input#inputEmail:focus {
     outline: none;
 }
 
 form input#submitButton {
     font-size: 1.4rem;
-    background: #dd004a;
+    background: linear-gradient(to right,#ff5075,#e0004d);
     border: none;
     text-transform: uppercase;
     color: #fff;
@@ -98,8 +98,8 @@ form input#submitButton {
 
 form input#submitButton:hover {
     cursor: pointer;
-    box-shadow: 0px 3px 5px #e7004c38;
-    -webkit-box-shadow: 0px 3px 5px #e7004c38;
+    box-shadow: -2px 0 8px 4px #ff9ab0;
+    -webkit-box-shadow: -2px 0 8px 4px #ff9ab0;
 }
 /*CSS LOADER*/
 .lds-ring {
