--- a/redirect/style.css
+++ b/redirect/style.css
@@ -1,142 +1,142 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 12px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 12px;
 }
 
 body {
-    width: 100%;
-    background-image: url(./bg-top-home-1600.png);
+  width: 100%;
+  background-image: url(./bg-top-home-1600.png);
 }
 
 .form-wrapper {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 400;
-    background: rgba(0, 0, 0, .6);
-    justify-content: center;
-    align-items: center;
-    -webkit-backdrop-filter: blur(6px);
-    backdrop-filter: blur(6px);
-    color: #333;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 400;
+  background: rgba(0, 0, 0, 0.6);
+  justify-content: center;
+  align-items: center;
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
+  color: #333;
 }
 
 form {
-    width: min(31rem, 90%);
-    padding: 4.4rem 4.2rem 6.2rem;
-    border-radius: 1rem;
-    box-shadow: 0px 3px 30px #e7004c38;
-    -webkit-box-shadow: 0px 3px 30px #e7004c38;
-    position: relative;
-    color: #e7e7e7;
-    background: #EFEFEF;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
+  width: min(31rem, 90%);
+  padding: 4.4rem 4.2rem 6.2rem;
+  border-radius: 1rem;
+  box-shadow: 0px 3px 30px #e7004c38;
+  -webkit-box-shadow: 0px 3px 30px #e7004c38;
+  position: relative;
+  color: #e7e7e7;
+  background: #efefef;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 form h1 {
-    margin: 0px;
-    font-size: clamp(2.6rem, 3vw, 3.2rem);
-    font-weight: bold;
-    line-height: 1.2;
-    letter-spacing: -0.04em;
-    color: #e9e9e9;
-    padding: 2rem 0;
-    position: relative;
-    background: linear-gradient(160deg, #4a84c8, #244e81);
-    background: linear-gradient(160deg, #4177B7, #275286);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    /*text-fill-color: transparent;*/
+  margin: 0px;
+  font-size: clamp(2.6rem, 3vw, 3.2rem);
+  font-weight: bold;
+  line-height: 1.2;
+  letter-spacing: -0.04em;
+  color: #e9e9e9;
+  padding: 2rem 0;
+  position: relative;
+  background: linear-gradient(160deg, #4a84c8, #244e81);
+  background: linear-gradient(160deg, #4177b7, #275286);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  /*text-fill-color: transparent;*/
 }
 
 form .input-box {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 form input#inputEmail {
-    width: 100%;
-    font-size: 1.4rem;
-    line-height: 2.2;
-    color: #111;
-    min-height: 4rem;
-    margin-bottom: 1rem;
-    border: none;
-    border-bottom: 1px solid #DD004A !important;
-    transition: all 0.5s ease;
+  width: 100%;
+  font-size: 1.4rem;
+  line-height: 2.2;
+  color: #111;
+  min-height: 4rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-bottom: 1px solid #dd004a !important;
+  transition: all 0.5s ease;
 }
 
 form input#inputEmail::placeholder {
-    padding-left: 20px;
-    font-size: 1.6rem;
+  padding-left: 20px;
+  font-size: 1.6rem;
 }
 
 form input#inputEmail:focus {
-    outline: none;
+  outline: none;
 }
 
 form input#submitButton {
-    font-size: 1.4rem;
-    background: linear-gradient(to right,#ff5075,#e0004d);
-    border: none;
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: bold;
-    padding: 1.6rem 1rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    transition: all 0.3s ease;
+  font-size: 1.4rem;
+  background: linear-gradient(to right, #ff5075, #e0004d);
+  border: none;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  padding: 1.6rem 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.3s ease;
 }
 
 form input#submitButton:hover {
-    cursor: pointer;
-    box-shadow: -2px 0 8px 4px #ff9ab0;
-    -webkit-box-shadow: -2px 0 8px 4px #ff9ab0;
+  cursor: pointer;
+  box-shadow: -2px 0 8px 4px #ff9ab0;
+  -webkit-box-shadow: -2px 0 8px 4px #ff9ab0;
 }
 /*CSS LOADER*/
 .lds-ring {
-    margin: auto;
-    /*display: inline-block;*/
-    display: none;
-    position: relative;
-    width: 40px;
-    height: 40px;
+  margin: auto;
+  /*display: inline-block;*/
+  display: none;
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  margin: 4px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #dd004a transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
   }
-  .lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    margin: 4px;
-    border: 4px solid #fff;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #dd004a transparent transparent transparent;
+  100% {
+    transform: rotate(360deg);
   }
-  .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
